syntax = "proto3";

import "google/protobuf/timestamp.proto";

package event;

message EventID {
    string value = 1;
}

message Event {
    EventID event_id = 1; 
    string title = 2;
    google.protobuf.Timestamp start_date = 3;
    google.protobuf.Timestamp end_date = 4;
    optional string text = 5;
    int32 user_owner = 6;
    optional float notify_time = 7;
}

message CreateEventRequest {
    optional EventID event_id = 1; 
    string title = 2;
    google.protobuf.Timestamp start_date = 3;
    google.protobuf.Timestamp end_date = 4;
    optional string text = 5;
    int32 user_owner = 6;
    optional float notify_time = 7;
}

message CreateEventResponse {
    Event event = 1;
    string error = 2;
}

service CalendarService {
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse); // ???
} 